this has become schrodinger's program, it may or may not work, and you won't know until you try

--- a/Views/ToDo/Index.cshtml
+++ b/Views/ToDo/Index.cshtml
@@ -30,11 +30,12 @@ class="done-checkbox">
     </table>
 
     <div class="panel-footer add-item-form">
-        <form>
+        <form id="add-form">
             <div id="add-item-error" class="text-danger"></div>
             <label for="add-item-title">Add a new item:</label>
             <input id="add-item-title">
-            <button type="button" id="add-item-button">Add</button>
+            <input id="add-item-button"  type="submit" title="Add">
+            @*<button type="button"  id="add-item-button">Add</button>*@
         </form>
     </div>
 </div>
